netgauze-serde-macros/tests/trybuild/05-from-located-no-module.stderr
error: 'module' of the Located error is not defined defined
  --> tests/trybuild/05-from-located-no-module.rs:16:7
   |
16 |     A(#[from_located] AError),
   |       ^^^^^^^^^^^^^^^

error[E0412]: cannot find type `LocatedTestError` in this scope
  --> tests/trybuild/05-from-located-no-module.rs:28:50
   |
19 | #[derive(LocatedError, Eq, PartialEq, Debug, Clone)]
   |          ------------ similarly named struct `LocatedAError` defined here
...
28 | fn parse(buf: Span<'_>) -> IResult<Span<'_>, u8, LocatedTestError> {
   |                                                  ^^^^^^^^^^^^^^^^
   |
help: a struct with a similar name exists
   |
28 | fn parse(buf: Span<'_>) -> IResult<Span<'_>, u8, LocatedAError> {
   |                                                  ~~~~~~~~~~~~~
help: you might be missing a type parameter
   |
28 | fn parse<LocatedTestError>(buf: Span<'_>) -> IResult<Span<'_>, u8, LocatedTestError> {
   |         ++++++++++++++++++
